# universal_controller

./: .gitignore  Cheat_Engine_for_the_DOM_39fdd20e_2026-02-01T04-40-50-990Z.txt  README.md  package-lock.json  package.json  pyproject.toml  rollup.config.js  universal-controller-v2.user.js
.github/workflows/: pages.yml
extension/: manifest.json  package-lock.json  package.json  rollup.config.js
extension/src/: background.js  extension-entry.js  storage-adapter.js
ml/: dom_inference.js  rasterizer.js
models/dom_classifier/: code_classifier.pkl  labels.json  raster_classifier.pkl
scripts/: benchmark_detection.py  browser_configs.py  browser_test.py  grok_bench.py  grok_bench_parallel.py  grok_probe_api.py  grok_probe_attachment.py  grok_probe_delete.py  grok_probe_fiber.py  grok_probe_streaming.py  scrape_storybooks.py  serve_mcp_remote.py  test_keepassxc.py  test_keepassxc_visual.py  train_code_classifier.py  train_dom_classifier.py
src/: index.js  styles.js
src/actions/: chat-api.js  dropdown-api.js  form-api.js  modal-api.js  text-input.js
src/core/: dom-locality-hash.js  element-path.js  passive-detector.js  phrasal-scanner.js  signature-store.js  value-scanner.js
src/detection/: patterns.js  universal-controller.js
src/iframe/: frame-agent.js  frame-discovery.js  frame-rpc.js
src/llm/: context-extractor.js  heap-scanner.js  state-machine.js
src/ui/: api-console.js  panel.js  renderers.js  tabs.js
tests/: test_chatgpt.py  test_grok.py  test_uc_provider.py
uc_browser/: __init__.py  _paths.py  browser.py  chrome_cookies.py  dom_classifier.py
uc_browser/llm_providers/: __init__.py  uc.py
uc_browser/mcp/: __init__.py  grok_tools.py
uc_browser/sites/: __init__.py  grok.py  grok_api.py  grok_fast.py
universal_controller.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
