[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universal_controller"
version = "1.0.0"
description = "Controlled-browser engine + MV3 extension + ML classifier for UI detection. Reusable library for any Python project doing browser automation."
readme = "README.md"
license = { text = "ISC" }
authors = [{ name = "Universal Controller" }]
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "joblib>=1.3",
]

[project.urls]
Homepage = "https://github.com/Ethycs/universal_controller"
Repository = "https://github.com/Ethycs/universal_controller"

[project.optional-dependencies]
# Deps for scripts/ — training + benchmarking the DOM classifier.
training = [
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "numpy>=1.24",
    "playwright>=1.40",
]
# Cookie extraction from installed Chrome (UCBrowser._inject_chrome_cookies).
chrome-cookies = [
    "rookiepy>=0.5",
]
# Anti-bot evasion plugin.
stealth = [
    "playwright-stealth>=2.0.2,<3",
]
# litellm CustomLLM provider that routes model="uc/<site>" through a
# GrokClient-style backend. Used by uc_browser.llm_providers.
litellm = [
    "litellm[proxy]>=1.82.4,<2",
]
# MCP tool registrations for UCBrowser-driven sites. Used by uc_browser.mcp.
mcp = [
    "mcp[cli]>=1,<2",
]
# Everything needed to run scripts/serve_mcp_remote.py and the litellm
# proxy against uc/grok. Convenience union — pulls in litellm, mcp,
# stealth, chrome-cookies.
adapter = [
    "litellm[proxy]>=1.82.4,<2",
    "mcp[cli]>=1,<2",
    "playwright-stealth>=2.0.2,<3",
    "rookiepy>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["uc_browser*"]
exclude = ["extension*", "models*", "scripts*", "ml*", "src*", "tests*"]

# ── pixi environments ────────────────────────────────────────────────
#
# Standalone pixi config so the submodule can be `pixi install`'d and
# run on its own from inside ext/universal_controller/. The parent
# event-harvester repo has its own pixi config that pip-installs this
# package editable from `path = "ext/universal_controller"`; the two
# pixi workspaces are independent — touching one doesn't touch the
# other.
#
# Use:
#   cd ext/universal_controller
#   pixi install
#   pixi run -e dev pytest tests/
#   pixi run -e dev litellm --config litellm.config.yaml --port 4000
#     (when a litellm.config.yaml is added next to this pyproject)

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.dependencies]
python = ">=3.12,<3.13"
playwright-stealth = ">=2.0.2,<3"

[tool.pixi.pypi-dependencies]
universal_controller = { path = ".", editable = true, extras = ["adapter"] }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.feature.dev.pypi-dependencies]
pytest = ">=7.0"
pytest-asyncio = ">=0.21"
ruff = ">=0.4"

[tool.pixi.feature.dev.tasks]
test = "pytest -v tests/"
lint = "ruff check uc_browser/ tests/"
format = "ruff format uc_browser/ tests/"
